apps/dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: dashboard
spec:
  selector:
    app: dashboard
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
